; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/extr_pch_uart.c_pch_uart_hal_set_break.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/extr_pch_uart.c_pch_uart_hal_set_break.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eg20t_port = type { i64 }

@UART_LCR = common dso_local global i64 0, align 8
@PCH_UART_LCR_SB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.eg20t_port*, i32)* @pch_uart_hal_set_break to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pch_uart_hal_set_break(%struct.eg20t_port* %0, i32 %1) #0 {
  %3 = alloca %struct.eg20t_port*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.eg20t_port* %0, %struct.eg20t_port** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.eg20t_port*, %struct.eg20t_port** %3, align 8
  %7 = getelementptr inbounds %struct.eg20t_port, %struct.eg20t_port* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @UART_LCR, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @ioread8(i64 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32, i32* @PCH_UART_LCR_SB, align 4
  %16 = load i32, i32* %5, align 4
  %17 = or i32 %16, %15
  store i32 %17, i32* %5, align 4
  br label %23

18:                                               ; preds = %2
  %19 = load i32, i32* @PCH_UART_LCR_SB, align 4
  %20 = xor i32 %19, -1
  %21 = load i32, i32* %5, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %18, %14
  %24 = load i32, i32* %5, align 4
  %25 = load %struct.eg20t_port*, %struct.eg20t_port** %3, align 8
  %26 = getelementptr inbounds %struct.eg20t_port, %struct.eg20t_port* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @UART_LCR, align 8
  %29 = add nsw i64 %27, %28
  %30 = call i32 @iowrite8(i32 %24, i64 %29)
  ret void
}

declare dso_local i32 @ioread8(i64) #1

declare dso_local i32 @iowrite8(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
